--- a/src/main/java/vistas/dialogos/DlgUbigeo.form
+++ b/src/main/java/vistas/dialogos/DlgUbigeo.form
@@ -3,7 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="Buscar nacionalidad"/>
+    <Property name="title" type="java.lang.String" value="Buscar ubigeo"/>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[606, 400]"/>
     </Property>
