--- a/reportes/ensa_reporte_permiso.jrxml
+++ b/reportes/ensa_reporte_permiso.jrxml
@@ -3,6 +3,15 @@
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
+	<parameter name="lista" class="java.util.List">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="fecha_inicio" class="java.util.Date">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="fecha_fin" class="java.util.Date">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString>
 		<![CDATA[SELECT
      registro_asistencia."fecha" AS registro_asistencia_fecha,
@@ -22,8 +31,10 @@ FROM
      INNER JOIN "dbo"."registro_asistencia" registro_asistencia ON detalle_registro_asistencia."registro_asistencia_id" = registro_asistencia."id"
      INNER JOIN "personal"."persona" persona ON registro_asistencia."empleado_nro_documento" = persona."nro_documento"
      INNER JOIN "personal"."ficha_laboral" ficha_laboral ON persona."nro_documento" = ficha_laboral."persona_nro_documento"
+WHERE
+$X{IN,registro_asistencia.empleado_nro_documento,lista} AND registro_asistencia.fecha BETWEEN $P{fecha_inicio} AND $P{fecha_fin}
 ORDER BY
-persona_paterno, persona_materno, persona_nombres, ficha_laboral_codigo_trabajador,Permiso_fecha_inicio,detalle_registro_asistencia_hora_inicio]]>
+tipo_permiso_tipo_descuento,persona_paterno, persona_materno, persona_nombres, ficha_laboral_codigo_trabajador,Permiso_fecha_inicio,detalle_registro_asistencia_hora_inicio]]>
 	</queryString>
 	<field name="registro_asistencia_fecha" class="java.sql.Date"/>
 	<field name="detalle_registro_asistencia_hora_inicio" class="java.sql.Time"/>
