--- a/reportes/r_boleta_vacaciones.jrxml
+++ b/reportes/r_boleta_vacaciones.jrxml
@@ -16,30 +16,38 @@
 	<parameter name="usuario" class="java.lang.String">
 		<defaultValueExpression><![CDATA["fesquivelc"]]></defaultValueExpression>
 	</parameter>
-	<parameter name="ruta" class="java.lang.String"/>
-	<parameter name="CONEXION_EMPLEADOS" class="java.sql.Connection"/>
-	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA["C:\\Users\\RyuujiMD\\Documents\\NetBeansProjects\\biosis-lite\\reportes\\"]]></defaultValueExpression>
-	</parameter>
 	<parameter name="vacacion_id" class="java.lang.Long">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
 		<![CDATA[SELECT
-     vacacion.empleado_nro_documento AS empleado_nro_documento,
-     vacacion.fecha_fin AS vacacion_fecha_fin,
-     vacacion.fecha_inicio AS vacacion_fecha_inicio,
-     vacacion.periodo_anio AS vacacion_periodo_anio,
-vacacion.documento AS vacacion_documento
+vacacion.empleado_nro_documento AS empleado_nro_documento,
+vacacion.fecha_fin AS vacacion_fecha_fin,
+vacacion.fecha_inicio AS vacacion_fecha_inicio,
+vacacion.periodo_anio AS vacacion_periodo_anio,
+vacacion.documento AS vacacion_documento,
+pers.paterno AS pers_paterno,
+pers.materno AS pers_materno,
+pers.nombres AS pers_nombres,
+pers.nro_documento AS pers_nro_documento,
+area.nombre as area_nombre
 FROM
-     Vacacion vacacion
+Vacacion vacacion
+INNER JOIN personal.persona pers ON vacacion.empleado_nro_documento = pers.nro_documento
+INNER JOIN personal.ficha_laboral flab ON pers.nro_documento = flab.persona_nro_documento
+LEFT JOIN institucional.v_area area ON flab.area_codigo = area.codigo
 WHERE vacacion.id = $P{vacacion_id}]]>
 	</queryString>
 	<field name="empleado_nro_documento" class="java.lang.String"/>
-	<field name="vacacion_fecha_fin" class="java.sql.Date"/>
-	<field name="vacacion_fecha_inicio" class="java.sql.Date"/>
+	<field name="vacacion_fecha_fin" class="java.sql.Timestamp"/>
+	<field name="vacacion_fecha_inicio" class="java.sql.Timestamp"/>
 	<field name="vacacion_periodo_anio" class="java.lang.Integer"/>
 	<field name="vacacion_documento" class="java.lang.String"/>
+	<field name="pers_paterno" class="java.lang.String"/>
+	<field name="pers_materno" class="java.lang.String"/>
+	<field name="pers_nombres" class="java.lang.String"/>
+	<field name="pers_nro_documento" class="java.lang.String"/>
+	<field name="area_nombre" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -56,17 +64,13 @@ WHERE vacacion.id = $P{vacacion_id}]]>
 				</textField>
 			</frame>
 			<staticText>
-				<reportElement style="Title" x="0" y="0" width="322" height="47" forecolor="#545454" uuid="3a4666ea-ca5c-4111-91ce-59fe595a3841"/>
+				<reportElement style="Title" x="0" y="0" width="555" height="47" forecolor="#545454" uuid="3a4666ea-ca5c-4111-91ce-59fe595a3841"/>
 				<box leftPadding="5"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="SansSerif" size="16" isBold="true"/>
 				</textElement>
-				<text><![CDATA[USO FÍSICO DE VACACIONES]]></text>
+				<text><![CDATA[M.P. SAN MARCOS - USO FÍSICO DE VACACIONES]]></text>
 			</staticText>
-			<image>
-				<reportElement x="322" y="0" width="233" height="47" uuid="13930c06-6956-4319-98ae-275191516703"/>
-				<imageExpression><![CDATA[$P{ruta}+"/reportes/logo.png"]]></imageExpression>
-			</image>
 		</band>
 	</title>
 	<pageHeader>
@@ -74,43 +78,35 @@ WHERE vacacion.id = $P{vacacion_id}]]>
 	</pageHeader>
 	<columnHeader>
 		<band height="300" splitType="Stretch">
-			<subreport>
-				<reportElement x="0" y="0" width="555" height="100" uuid="8b9501e0-93f0-4f45-a4f4-5d46c8a0f8ce"/>
-				<subreportParameter name="empleado_nro_documento">
-					<subreportParameterExpression><![CDATA[$F{empleado_nro_documento}]]></subreportParameterExpression>
-				</subreportParameter>
-				<connectionExpression><![CDATA[$P{CONEXION_EMPLEADOS}]]></connectionExpression>
-				<subreportExpression><![CDATA[$P{ruta} + "/reportes/subr_datos_empleado.jasper"]]></subreportExpression>
-			</subreport>
 			<staticText>
-				<reportElement x="0" y="100" width="157" height="20" uuid="10fdbe5d-8a73-4bff-b142-f3b31e604548"/>
+				<reportElement x="0" y="76" width="157" height="20" uuid="10fdbe5d-8a73-4bff-b142-f3b31e604548"/>
 				<textElement verticalAlignment="Middle">
 					<font size="11" isBold="true"/>
 				</textElement>
 				<text><![CDATA[PERÍODO:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="157" y="100" width="398" height="20" uuid="32d65cde-74e5-47e4-8898-06efdb1a3936"/>
+				<reportElement x="157" y="76" width="398" height="20" uuid="32d65cde-74e5-47e4-8898-06efdb1a3936"/>
 				<textElement verticalAlignment="Middle">
 					<font size="11"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{vacacion_periodo_anio}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement positionType="FixRelativeToBottom" x="0" y="160" width="555" height="1" uuid="25e03c4f-5988-4f92-89d3-f672827e8098"/>
+				<reportElement positionType="FixRelativeToBottom" x="0" y="136" width="555" height="1" uuid="25e03c4f-5988-4f92-89d3-f672827e8098"/>
 				<graphicElement>
 					<pen lineWidth="0.5" lineColor="#999999"/>
 				</graphicElement>
 			</line>
 			<staticText>
-				<reportElement x="0" y="140" width="157" height="20" uuid="60758ea9-d11d-492c-9f58-a3f4b84ffd60"/>
+				<reportElement x="0" y="116" width="157" height="20" uuid="60758ea9-d11d-492c-9f58-a3f4b84ffd60"/>
 				<textElement verticalAlignment="Middle">
 					<font size="11" isBold="true"/>
 				</textElement>
 				<text><![CDATA[DESDE - HASTA:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="157" y="140" width="398" height="20" uuid="17f51781-3953-46d7-bc7d-9212a103b23a"/>
+				<reportElement x="157" y="116" width="398" height="20" uuid="17f51781-3953-46d7-bc7d-9212a103b23a"/>
 				<textElement verticalAlignment="Middle">
 					<font size="11"/>
 				</textElement>
@@ -139,19 +135,61 @@ WHERE vacacion.id = $P{vacacion_id}]]>
 				<text><![CDATA[FIRMA DEL JEFE INMEDIATO]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="120" width="157" height="20" uuid="87f9bde7-1574-4e95-a708-1e23b3209b87"/>
+				<reportElement x="0" y="96" width="157" height="20" uuid="87f9bde7-1574-4e95-a708-1e23b3209b87"/>
 				<textElement verticalAlignment="Middle">
 					<font size="11" isBold="true"/>
 				</textElement>
 				<text><![CDATA[DOC. DE VACACION:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="157" y="120" width="398" height="20" uuid="6abf7605-e87b-4f7a-a918-52dc9f4e19ed"/>
+				<reportElement x="157" y="96" width="398" height="20" uuid="6abf7605-e87b-4f7a-a918-52dc9f4e19ed"/>
 				<textElement verticalAlignment="Middle">
 					<font size="11"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{vacacion_documento}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="0" y="40" width="157" height="20" uuid="c2d849f5-46ea-4ed1-a8db-2547a48d6d31"/>
+				<textElement verticalAlignment="Middle">
+					<font size="11" isBold="true"/>
+				</textElement>
+				<text><![CDATA[ÁREA:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="157" y="0" width="398" height="20" uuid="4cfb0a84-a34e-4c62-99b6-cb5e92bf6497"/>
+				<textElement verticalAlignment="Middle">
+					<font size="11"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{pers_nro_documento}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="157" y="40" width="398" height="20" uuid="918ef4ac-a2e4-4ce5-a4f0-1ee215bccacb"/>
+				<textElement verticalAlignment="Middle">
+					<font size="11"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{area_nombre}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="0" y="0" width="157" height="20" uuid="b442f0f2-4761-4f7d-a569-0ce8a985e0dc"/>
+				<textElement verticalAlignment="Middle">
+					<font size="11" isBold="true"/>
+				</textElement>
+				<text><![CDATA[DNI:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="157" y="20" width="398" height="20" uuid="d24ddb0d-9ded-411e-b880-25b990b1e417"/>
+				<textElement verticalAlignment="Middle">
+					<font size="11"/>
+				</textElement>
+				<textFieldExpression><![CDATA[String.format("%s %s %s",$F{pers_paterno},$F{pers_materno},$F{pers_nombres})]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="0" y="20" width="157" height="20" uuid="b43c7594-5ed6-409d-a1f2-80aef9777466"/>
+				<textElement verticalAlignment="Middle">
+					<font size="11" isBold="true"/>
+				</textElement>
+				<text><![CDATA[EMPLEADO:]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<columnFooter>
