--- a/reportes/r_empleados_no_enrolados.jrxml
+++ b/reportes/r_empleados_no_enrolados.jrxml
@@ -3,32 +3,42 @@
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<parameter name="fecha_inicio" class="java.util.Date">
-		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
-	</parameter>
-	<parameter name="fecha_fin" class="java.util.Date">
-		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
-	</parameter>
-	<parameter name="ruta" class="java.lang.String"/>
+	<style name="Title" forecolor="#FFFFFF" fontName="Times New Roman" fontSize="50" isBold="false" pdfFontName="Times-Bold"/>
+	<style name="SubTitle" forecolor="#CCCCCC" fontName="Times New Roman" fontSize="18" isBold="false" pdfFontName="Times-Roman"/>
+	<style name="Column header" forecolor="#666666" fontName="Times New Roman" fontSize="14" isBold="true" pdfFontName="Times-Roman"/>
+	<style name="Detail" mode="Transparent" fontName="Times New Roman" pdfFontName="Times-Roman"/>
+	<style name="Row" mode="Transparent" fontName="Times New Roman" pdfFontName="Times-Roman">
+		<conditionalStyle>
+			<conditionExpression><![CDATA[$V{REPORT_COUNT}%2 == 0]]></conditionExpression>
+			<style mode="Opaque" backcolor="#F0EFEF"/>
+		</conditionalStyle>
+	</style>
 	<parameter name="usuario" class="java.lang.String"/>
-	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
-		<defaultValueExpression><![CDATA["C:\\Users\\RyuujiMD\\Documents\\NetBeansProjects\\biosis-lite\\reportes\\"]]></defaultValueExpression>
-	</parameter>
-	<parameter name="CONEXION_EMPLEADOS" class="java.sql.Connection"/>
 	<queryString>
 		<![CDATA[SELECT
-CAST(u.sUserID as integer) as empleado_nro_documento,
-dep.sName as departamento_nombre
+pers.paterno,
+pers.materno,
+pers.nombres,
+pers.nro_documento,
+area.nombre as area_nombre,
+flab.codigo_trabajador as flab_codigo_trabajador
 FROM
-TB_USER u 
-inner join TB_USER_DEPT dep on u.nDepartmentIdn = dep.nDepartmentIdn
-WHERE u.nUserIdn in (SELECT us.nUserIdn FROM TB_USER_TEMPLATE us)
-ORDER BY dep.sName, u.sUserID]]>
+personal.persona pers
+INNER JOIN personal.ficha_laboral flab ON pers.nro_documento = flab.persona_nro_documento
+LEFT JOIN institucional.v_area area ON flab.area_codigo = area_codigo
+WHERE
+pers.nro_documento NOT IN (SELECT empleado_nro_documento COLLATE Modern_Spanish_CI_AS FROM biostar.v_enrolados)
+ORDER BY
+area_nombre,paterno,materno,nombres]]>
 	</queryString>
-	<field name="empleado_nro_documento" class="java.lang.Integer"/>
-	<field name="departamento_nombre" class="java.lang.String"/>
+	<field name="paterno" class="java.lang.String"/>
+	<field name="materno" class="java.lang.String"/>
+	<field name="nombres" class="java.lang.String"/>
+	<field name="nro_documento" class="java.lang.String"/>
+	<field name="area_nombre" class="java.lang.String"/>
+	<field name="flab_codigo_trabajador" class="java.lang.String"/>
 	<group name="g_oficina">
-		<groupExpression><![CDATA[$F{departamento_nombre}]]></groupExpression>
+		<groupExpression><![CDATA[$F{area_nombre}]]></groupExpression>
 		<groupHeader>
 			<band height="40">
 				<staticText>
@@ -55,7 +65,7 @@ ORDER BY dep.sName, u.sUserID]]>
 						<rightPen lineWidth="1.0"/>
 					</box>
 					<textElement verticalAlignment="Middle"/>
-					<textFieldExpression><![CDATA[$F{departamento_nombre}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{area_nombre}]]></textFieldExpression>
 				</textField>
 				<staticText>
 					<reportElement mode="Opaque" x="0" y="20" width="116" height="20" forecolor="#000000" backcolor="#999999" uuid="7ebcd746-bad5-4f03-8c1b-8ce1e1c047e1"/>
@@ -148,29 +158,81 @@ ORDER BY dep.sName, u.sUserID]]>
 				</textField>
 			</frame>
 			<textField>
-				<reportElement x="0" y="0" width="320" height="52" forecolor="#545454" uuid="0b3100c0-5db2-46bc-a589-dbebcc15986c"/>
+				<reportElement x="0" y="0" width="555" height="52" forecolor="#545454" uuid="0b3100c0-5db2-46bc-a589-dbebcc15986c"/>
 				<box leftPadding="5"/>
 				<textElement verticalAlignment="Middle">
 					<font size="16" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA["REPORTE DE EMPLEADOS ENROLADOS"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["M.P. SAN MARCOS - REPORTE DE EMPLEADOS NO ENROLADOS"]]></textFieldExpression>
 			</textField>
-			<image>
-				<reportElement x="320" y="0" width="233" height="47" uuid="f5b09920-7e8b-4de2-997f-b70e84b7fa54"/>
-				<imageExpression><![CDATA[$P{ruta}+"/reportes/logo.png"]]></imageExpression>
-			</image>
 		</band>
 	</title>
 	<detail>
 		<band height="20" splitType="Stretch">
-			<subreport>
-				<reportElement x="0" y="0" width="555" height="20" uuid="a653bc4e-e946-46a3-992d-e5579a225936"/>
-				<subreportParameter name="empleado_nro_documento">
-					<subreportParameterExpression><![CDATA[$F{empleado_nro_documento}]]></subreportParameterExpression>
-				</subreportParameter>
-				<connectionExpression><![CDATA[$P{CONEXION_EMPLEADOS}]]></connectionExpression>
-				<subreportExpression><![CDATA[$P{ruta} + "/reportes/subr_datos_empleado_3.jasper"]]></subreportExpression>
-			</subreport>
+			<textField>
+				<reportElement x="0" y="0" width="116" height="20" uuid="74c6b03f-fa0d-4e07-bf24-a1e470166073"/>
+				<box leftPadding="3">
+					<pen lineWidth="1.0"/>
+					<topPen lineWidth="1.0"/>
+					<leftPen lineWidth="1.0"/>
+					<bottomPen lineWidth="1.0"/>
+					<rightPen lineWidth="1.0"/>
+				</box>
+				<textElement verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{flab_codigo_trabajador}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="116" y="0" width="147" height="20" uuid="4c1a9f59-35f4-49c3-aa11-139c48decb64"/>
+				<box leftPadding="3">
+					<pen lineWidth="1.0"/>
+					<topPen lineWidth="1.0"/>
+					<leftPen lineWidth="1.0"/>
+					<bottomPen lineWidth="1.0"/>
+					<rightPen lineWidth="1.0"/>
+				</box>
+				<textElement verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{nro_documento}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="263" y="0" width="292" height="20" uuid="807d0627-043b-4d97-a0dc-bc235a306327"/>
+				<box leftPadding="3">
+					<pen lineWidth="1.0"/>
+					<topPen lineWidth="1.0"/>
+					<leftPen lineWidth="1.0"/>
+					<bottomPen lineWidth="1.0"/>
+					<rightPen lineWidth="1.0"/>
+				</box>
+				<textElement verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[String.format("%s %s %s",$F{paterno},$F{materno},$F{nombres})]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
+	<columnFooter>
+		<band height="24">
+			<frame>
+				<reportElement mode="Opaque" x="0" y="0" width="555" height="24" forecolor="#D0B48E" backcolor="#545454" uuid="6c7c18d9-fe0f-412a-aed5-098521185d2e"/>
+				<textField evaluationTime="Report">
+					<reportElement style="Column header" x="513" y="0" width="40" height="20" forecolor="#FFFFFF" uuid="5fc53203-e553-4914-b932-504daae9d186"/>
+					<textElement verticalAlignment="Middle">
+						<font fontName="SansSerif" size="10" isBold="false"/>
+					</textElement>
+					<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
+				</textField>
+				<textField>
+					<reportElement style="Column header" x="433" y="0" width="80" height="20" forecolor="#FFFFFF" uuid="3967aa22-81d0-4013-9750-63236cdbd6c0"/>
+					<textElement textAlignment="Right" verticalAlignment="Middle">
+						<font fontName="SansSerif" size="10" isBold="false"/>
+					</textElement>
+					<textFieldExpression><![CDATA["Página "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
+				</textField>
+				<textField pattern="dd/MM/yyyy HH:mm:ss">
+					<reportElement style="Column header" x="2" y="1" width="197" height="20" forecolor="#FFFFFF" uuid="70541667-28ab-43d5-8f7e-dfd907787a3b"/>
+					<textElement verticalAlignment="Middle">
+						<font fontName="SansSerif" size="10" isBold="false"/>
+					</textElement>
+					<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+				</textField>
+			</frame>
+		</band>
+	</columnFooter>
 </jasperReport>
