--- a/src/main/java/vistas/dialogos/DlgLogin.form
+++ b/src/main/java/vistas/dialogos/DlgLogin.form
@@ -76,7 +76,7 @@
           <Font name="Tahoma" size="14" style="1"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="BIOSIS - ENSA"/>
+        <Property name="text" type="java.lang.String" value="BIOSIS - SAN MARCOS"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
